<resources>
    <string name="app_name">Earthquakes</string>
    <string name="need_location_permission">We need permission to access your location</string>
    <string name="ok">OK</string>
    <string name="not_now">Not now</string>
    <string name="setting">Setting</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="location">Location</string>
    <string name="chart">Chart</string>
    <string name="search">Search</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="language">Language</string>
    <string name="template">Template</string>
    <string name="map_type">Map type</string>
    <string name="get_notification_when_eq">Receive earthquake notification</string>
    <string name="min_value_for_get_notification">Minimum size to receive notifications</string>
    <string name="get_notification_for_special_province">Receive alerts for specific provinces</string>
    <string name="street">Street</string>
    <string name="satellite">Satellite</string>
    <string name="biggerThan2">Bigger than 2</string>
    <string name="biggerThan3">Bigger than 3</string>
    <string name="biggerThan4">Bigger than 4</string>
    <string name="biggerThan5">Bigger than 5</string>
    <string name="biggerThan6">Bigger than 6</string>
    <string name="biggerThan7">Bigger than 7</string>
    <string name="diffrent_lang">زبان</string>
    <string name="language_set">زبان برنامه با موفقیت تغییر کرد.برای اعمال تغیرات باید برنامه دوباره باز شود</string>
    <string name="system_default">System Default</string>
    <string name="theme_set">Saved,The app must be restarted to apply the new theme</string>
    <string name="eq_info">Earthquake Information</string>
</resources>